@@ -137,7 +137,7 @@ sub store_file_from_fh {
     my $current_dest;
 
     return sub {
-        my ($available_to_read, $eof) = @_;
+        my ($available_to_read, $eof, $checksum) = @_;
 
         my $last_error;
 
@@ -254,6 +254,10 @@ sub store_file_from_fh {
                                 size   => $eventual_length,
                                 key    => $key,
                                 path   => $current_dest->{path},
+                                $checksum ? (
+                                    checksum => $checksum,
+                                    checksumverify => 1,
+                                ) : (),
                             });
                     }
                     catch {
